--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Deep Learning Projects"
+  - title: "Deep Learning"
     url: /deep-learning/
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
