--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,8 @@
 # main links
 main:
-  - title: "About"
-    url: /about/
-  - title: "Deep Learning"
-    url: /deep-learning/
+  - title: "Quick-Start Guide"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
